# personal-portfolio

backend/: .env  .env.example  .gitignore  Cargo.toml  Jenkinsfile
backend/migrations/: 20240326184515_personal.down.sql  20240326184515_personal.up.sql
backend/src/: config.rs  lib.rs  main.rs  mocks.rs  routes.rs
backend/src/achievements/: interface.rs
backend/src/company/: interface.rs
backend/src/experiences/: interface.rs
backend/src/reviews/: controller.rs  interface.rs  model.rs  query.rs  repository.rs  service.rs
backend/src/users/: controller.rs  interface.rs  mod.rs  model.rs  query.rs  repository.rs  service.rs
backend/src/utils/: database.rs  dto.rs  error.rs  mod.rs  service.rs  time.rs  validate.rs
backend/tests/users/: should_return_user_by_slug.rs
backend/utils/: config.rs
frontend/: .env.example  README.md  package.json  playwright.config.js  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.html
frontend/src/lib/components/: index.js  types.d.ts
frontend/src/lib/components/button/: Button.svelte  types.d.ts
frontend/src/lib/components/card/: Card.svelte
frontend/src/routes/: +page.svelte
frontend/tests/vitest/lib/components/button/: index.spec.js
frontend/tests/vitest/test-results/coverage/: index.html
frontend/tests/vitest/test-results/coverage/components/: index.html  index.js.html
frontend/tests/vitest/test-results/coverage/components/button/: Button.svelte.html  index.html
