[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.79"
axum ={ version = "0.7.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
fake = { version = "2.9.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1"
dotenv = "0.15.0"
bson = "2.9.0"
unix-ts = "0.6.0"
surrealdb = "1.3.1"
serde_json = "1.0.114"
sqlx = {version= "0.7.4", features = ["postgres"]}


[dev-dependencies]
anyhow="1"
