[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mockall = "0.12.1"
thiserror = { version = "1.0.30"}
tracing = { version ="0.1.37"}
anyhow = { version = "1.0.81"}
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
axum = {version = "0.7.4", features = ["macros"]}
chrono ={ version = "0.4.37", features = ["serde"] }
chrono-tz = { version = "0.8.6"}
dotenv = "0.15.0"
fake = { version = "2.9.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time", "chrono"] }
tokio = {version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.17.0", features = ["derive"] }
regex = { version = "1.10.4" }
tower = { version = "0.4.13", features = ["timeout", "buffer", "limit"] }
tower-http = {version="0.4.0", features = ["trace", "cors"]}